--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&display=swap');
-*{
-    padding:0;
-    margin:0;
+
+* {
+    padding: 0;
+    margin: 0;
     box-sizing: border-box;
 }
-body{
-    background-image: linear-gradient(to bottom, rgba(0,0,0,.7), rgba(0,0,0,.4)), url("./assets/bg.jpg");
+
+body {
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, .7), rgba(0, 0, 0, .4)), url("./assets/bg.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -13,12 +15,13 @@ body{
     font-family: "Poppins", sans-serif;
 }
 
-.conainer{
-    width: 100%;
+.conainer {
+    width: 100vw;
     height: 100vh;
 }
- /*-------------------navbar css start----------------------------*/
-.navbar{
+
+/*-------------------navbar css start----------------------------*/
+.navbar {
     display: flex;
     flex-direction: row;
     width: 100%;
@@ -26,22 +29,25 @@ body{
     justify-content: space-between;
     height: 20vh;
 }
-.logo img{
-    margin-left: 100px;
+
+.logo img {
+    margin-left: 6.25rem;
 }
-.list{
+
+.list {
     display: flex;
     flex-direction: row;
     align-items: center;
     color: #ffffff;
-    gap: 65px;
-    margin-right: 70px;
+    gap: 4.1rem;
+    margin-right: 4.3rem;
     font-size: px;
     list-style-type: none;
-    border-bottom: 4px solid #ffffff;
-    padding: 10px 20px;
+    border-bottom: 0.25px solid #ffffff;
+    padding: 0.7rem 1.2rem;
 }
-.list-item p{
+
+.list-item p {
     text-align: center;
 }
 
@@ -49,111 +55,241 @@ body{
 
 
 /* -------------------------Section hero css start ---------------------------------------------- */
-.left h1{
+.left h1 {
     color: #ffffff;
-    font-size: 58px;
-    margin-top: 50px;
-    margin-left: 90px;
+    font-size: 3.6rem;
+    margin-top: 3rem;
+    margin-left: 5.6rem;
 }
-.left button{
-    margin-top: 60px;
-    margin-left: 110px;
+
+.left button {
+    margin-top: 3.7rem;
+    margin-left: 6.8rem;
     background-color: transparent;
     color: #ffffff;
-    padding: 10px 20px;
+    padding: 0.7rem 1.1rem;
     border-radius: 40px;
-    border:2px solid #ffffff;
+    border: 2px solid #ffffff;
 }
 
 /* -------------------------Section hero css end ---------------------------------------------- */
 
 /* -------------------------Section hero right css start ---------------------------------------------- */
 
-.square2{
+.square2 {
     border: 2px solid black;
     height: 24vh;
     width: 40vh;
     color: #ffffff;
-    background-color: rgba(255,255,255,.4);
+    background-color: rgba(255, 255, 255, .4);
     position: relative;
-    left: 600px;
-    bottom: 40px;
+    left: 37.5rem;
+    bottom: 2.5rem;
 }
-.icon{
+
+.icon {
     background-color: #FFFFFF;
-    height: 40px;
-    width: 80px;
+    height: 2.5rem;
+    width: 5rem;
     color: #000000;
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 20px;
-    margin-top: 20px;
+    border-radius: 1.25rem;
+    margin-top: 1.25rem;
     margin-bottom: 10px;
     border: 2px solid black;
-    margin-left: 20px;
+    margin-left: 1.25rem;
 }
-.square p{
-    margin-left: 20px;
+
+.square p {
+    margin-left: 1.25rem;
 }
-.square{
+
+.square {
     border: 2px solid black;
     height: 20vh;
-    width: 40vh;
+    width: 20vw;
     color: #ffffff;
-    background-color: rgba(255,255,255,.4);
+    background-color: rgba(255, 255, 255, .4);
     position: absolute;
     /* left: 600px; */
-    top: 200px;
-    right: 200px;
+    top: 12.5rem;
+    right: 12.5rem;
 }
-.square2{
+
+.square2 {
     border: 2px solid black;
     height: 23vh;
     width: 40vh;
     color: #ffffff;
-    background-color: rgba(255,255,255,.4);
+    background-color: rgba(255, 255, 255, .4);
     position: absolute;
-    bottom: 130px;
-    right: 200px;
-}
-.square2 p{
-    margin-left: 20px;
-}
-.circle-line {
-    position: absolute;
-    height: 70px;
-    width: 2px;
-    background-color: #FFFFFF;
-    top: 145px;
-    left: 220px;
-}
-.circle-line .circle{
-    position: absolute;
-    width: 20px;
-    height: 20px;
-    border-radius: 50px;
-    background-color: #FFFFFF;
-    bottom: 0;
-    left: -8px;
+    bottom: 8.125rem;
+    right: 12.5rem;
 }
 
-.circle-line2{
-    position: absolute;
-    width: 70px;
-    height: 2px;
-    background-color: #FFFFFF;
-    bottom: 100px;
-    left: 295px;
+.square2 p {
+    margin-left: 1.25rem;
 }
-.circle-line2 .circle{
+
+.circle-line {
     position: absolute;
-    width: 20px;
-    height: 20px;
-    border-radius: 50px;
+    height: 4.35rem;
+    width: 0.1rem;
     background-color: #FFFFFF;
-    right: -20px;
-    bottom: -9px;
+    top: 9.1rem;
+    left: 15rem;
+}
+
+.circle {
+    position: absolute;
+    width: 1.25rem;
+    height: 1.25rem;
+    border-radius: 3.1rem;
+    background-color: #FFFFFF;
+    bottom: 0;
+    left: -0.5rem;
+}
+.circle2 {
+    position: absolute;
+    width: 1.25rem;
+    height: 1.25rem;
+    border-radius: 3.1rem;
+    background-color: #FFFFFF;
+    bottom: 0;
+    top: -0.7rem;
+    left: 4.3rem;
+}
+
+.circle-line2 {
+    position: absolute;
+    width: 4.35rem;
+    height: 0.1rem;
+    background-color: #FFFFFF;
+    bottom: 6.25rem;
+    left: 18.4rem;
+}
+
+.circle-line2 .circle {
+    position: absolute;
+    width: 1.25rem;
+    height: 1.25rem;
+    border-radius: 3.1rem;
+    background-color: #FFFFFF;
+    right: -1.25rem;
+    bottom: -0.5rem;
 }
 
 /* -------------------------Section hero right css end ---------------------------------------------- */
+
+
+
+
+@media screen and (max-width: 768px) {
+    body {
+        background-image: linear-gradient(to bottom, rgba(0, 0, 0, .7), rgba(0, 0, 0, .4)), url("./assets/bg.jpg");
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        height: 100vh;
+        font-family: "Poppins", sans-serif;
+        background-blend-mode: darken;
+        overflow-x: hidden;
+    }
+
+    .conainer {
+        width: 100vw;
+        height: 20px;
+    }
+
+    /*-------------------navbar css start----------------------------*/
+    .navbar {
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        align-items: center;
+        justify-content: space-between;
+        height: 20vh;
+    }
+
+    .logo img {
+        margin-left: 1rem;
+        height: 5vh;
+    }
+
+    .list {
+        display: none;
+        flex-direction: row;
+        align-items: center;
+        color: #ffffff;
+        gap: 4.1rem;
+        margin-right: 4.3rem;
+        font-size: px;
+        list-style-type: none;
+        border-bottom: 0.25px solid #ffffff;
+        padding: 0.7rem 1.2rem;
+    }
+
+    .list-item p {
+        text-align: center;
+    }
+
+    /* -------------------------nav bar css end---------------------------------------------- */
+
+
+    /* -------------------------Section hero css start ---------------------------------------------- */
+    .left h1 {
+        color: #ffffff;
+        font-size: 1.6rem;
+        margin-top: 3rem;
+        margin-left: 5.6rem;
+    }
+
+    .left button {
+        margin-top: 3.7rem;
+        margin-left: 6.8rem;
+        background-color: transparent;
+        color: #ffffff;
+        padding: 0.7rem 1.1rem;
+        border-radius: 40px;
+        border: 2px solid #ffffff;
+    }
+
+    /* -------------------------Section hero css end ---------------------------------------------- */
+
+    /* -------------------------Section hero right css start ---------------------------------------------- */
+
+    .square {
+        border: 2px solid black;
+        height: 30vh;
+        width: 40vw;
+        color: #ffffff;
+        background-color: rgba(255, 255, 255, .4);
+        position: absolute;
+        /* left: 600px; */
+        top: 22.5rem;
+        right: 12.5rem;
+    }
+
+    .circle-line {
+        position: absolute;
+        height: 4.35rem;
+        width: 0.1rem;
+        background-color: #FFFFFF;
+        top: 12.1rem;
+        left: 5rem;
+    }
+
+    .circle {
+        position: absolute;
+        width: 1.25rem;
+        height: 1.25rem;
+        border-radius: 3.1rem;
+        background-color: #FFFFFF;
+        bottom: 0;
+        left: -0.5rem;
+    }
+
+
+}
